[metadata]
name = apex
summary = A ansible roles and tools for deploying OPNFV
description-file =
    INFO 
author = Apex Team
author-email = michapma@redhat.com trozet@redhat.com dradez@redhat.com
home-page = https://github.com/opnfv/apex
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    playbooks = ansible/playbooks/*
    usr/local/share/ansible/roles/ = ansible/roles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
