[metadata]
name = apex
summary = TripleO based installer for deploying OPNFV
description-file =
    INFO
author = Apex Team
author-email = michapma@redhat.com trozet@redhat.com dradez@redhat.com
home-page = https://github.com/opnfv/apex
license =  Apache-2
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    opnfv-deploy = apex.deploy:main
    opnfv-clean = apex.clean:main
    opnfv-pyutil = apex.utils:main

[files]
packages =
    apex
data_files =
    share/opnfv-apex/ =
        build/network-environment.yaml
        build/opnfv-environment.yaml
        build/upstream-environment.yaml
        build/kubernetes-environment.yaml
        build/nics-template.yaml.jinja2
        build/csit-environment.yaml
        build/csit-queens-environment.yaml
        build/virtual-environment.yaml
        build/baremetal-environment.yaml
        build/domain.xml
        build/build_ovs_nsh.sh
    share/opnfv-apex/ansible = lib/ansible/*
    share/opnfv-apex/config = config/*
    share/opnfv-apex/docs = docs/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
